Do not emit DolphinView's urlChanged(const KUrl&) signal if the view is activated, as discussed with Peter. This fixes a crash on a failed assert if the DolphinView's and the KUrlNavigator's URLs are slightly different (i.e., if a slash has been added to the navigator's URL by KDirLister).

I could not find any regressions caused by this change so far, but
even if there are side effects, the upcoming beta and RC releases
should give enough user feedback and time to fix them.

BUG: 180494

svn path=/trunk/KDE/kdebase/apps/; revision=961519